--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@tanstack/react-query": "^5.66.0",
+    "graphql-request": "^7.1.2",
     "next-themes": "^0.4.4",
     "pinata-web3": "^0.5.4",
     "react": "^19.0.0",
